added countdown timer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<title>Reflex Test</title>
 	</head>
 	<body>
+		<p id="countdown"></p> <!-- import countdown timer-->
+		<script src="script.js"></script>
+
 		<h1>hello</h1>
 		<h2>Are you ready? press start</h2>
 		<a href="game.html"><b>Start</b></a>
