center timer and add stylesheet

--- a/game.html
+++ b/game.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 	<head>
+		<meta name="viewport" content="width=device-width intial-size=1.0">
+		<link rel="stylesheet" href="style.css"> 
 	</head>
 	<body>
-		<h1>game</h1>
+		<h1 class="timer" id="countdown"></h1> <!-- import countdown timer-->
+		<script src="script.js"></script>
 	</body>
