square appears after countdown finishes, square is in the center of the screen

--- a/game.html
+++ b/game.html
@@ -6,5 +6,5 @@
 	<body>
 		<h1 class="timer" id="countdown"></h1> <!-- import countdown timer-->
 		<script src="script.js"></script>
-		<div class="square" style="background-color: blue">Blue</div>
+		<div id="square"></div>
 	</body>
