--- a/game.html
+++ b/game.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<head>
-		<meta name="viewport" content="width=device-width intial-size=1.0">
+		<meta name="viewport" content="width=device-width initial-size=1.0">
 		<link rel="stylesheet" href="style.css"> 
 	</head>
 	<body>
